Added PutImageManifest operation
