# src/main/java/com/euphoriav/docker/registry/controller/RegistryControllerAdvice.java
@@ -1,14 +1,12 @@
 package com.euphoriav.docker.registry.controller;
 
 import com.euphoriav.docker.registry.dto.ErrorResponse;
-import com.euphoriav.docker.registry.exception.InternalServerException;
-import com.euphoriav.docker.registry.exception.InvalidRangeException;
-import com.euphoriav.docker.registry.exception.InvalidRequestException;
-import com.euphoriav.docker.registry.exception.NotFoundException;
+import com.euphoriav.docker.registry.exception.*;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.HttpRequestMethodNotSupportedException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
@@ -19,7 +17,7 @@ public class RegistryControllerAdvice {
 
     @ExceptionHandler(InvalidRequestException.class)
     public ResponseEntity<ErrorResponse> handle(InvalidRequestException e) {
-        log.warn(e.toString());
+        log.warn(e.getMessage());
         return ResponseEntity.badRequest()
                 .contentType(MediaType.APPLICATION_JSON)
                 .body(e.getErrorResponse());
@@ -27,7 +25,7 @@ public class RegistryControllerAdvice {
 
     @ExceptionHandler(NotFoundException.class)
     public ResponseEntity<ErrorResponse> handle(NotFoundException e) {
-        log.warn(e.toString());
+        log.warn(e.getMessage());
         return ResponseEntity.status(HttpStatus.NOT_FOUND)
                 .contentType(MediaType.APPLICATION_JSON)
                 .body(e.getErrorResponse());
@@ -35,10 +33,25 @@ public class RegistryControllerAdvice {
 
     @ExceptionHandler(InvalidRangeException.class)
     public ResponseEntity<ErrorResponse> handle(InvalidRangeException e) {
-        log.warn(e.toString());
+        log.warn(e.getMessage());
         return ResponseEntity.status(HttpStatus.REQUESTED_RANGE_NOT_SATISFIABLE)
                 .contentType(MediaType.APPLICATION_JSON)
                 .body(e.getErrorResponse());
+    }
+
+    @ExceptionHandler(LimitViolationException.class)
+    public ResponseEntity<ErrorResponse> handle(LimitViolationException e) {
+        log.warn(e.getMessage());
+        return ResponseEntity.status(HttpStatus.PAYLOAD_TOO_LARGE)
+                .contentType(MediaType.APPLICATION_JSON)
+                .body(e.getErrorResponse());
+    }
+
+    @ExceptionHandler(HttpRequestMethodNotSupportedException.class)
+    @ResponseStatus(HttpStatus.METHOD_NOT_ALLOWED)
+    public String handle(HttpRequestMethodNotSupportedException e) {
+        log.warn(e.getMessage());
+        return e.getMessage();
     }
 
     @ExceptionHandler(InternalServerException.class)
